--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "landscapeapp"]
 	path = landscapeapp
-	url = https://github.com/cncf/landscapeapp
+	url = https://github.com/PaimaStudios/landscapeapp
