--- a/airtable-fetch/package.json
+++ b/airtable-fetch/package.json
@@ -14,13 +14,13 @@
       "url": "https://github.com/PaimaStudios/paima-landscape"
   },
   "devDependencies": {
-      "@types/lodash": "4.14.194",
-      "@types/node": "18.16.3",
-      "airtable": "0.11.6",
-      "axios": "1.4.0",
-      "lodash": "4.17.21",
-      "ts-node": "10.9.1",
-      "typescript": "5.0.4",
-      "yaml": "2.2.2"
+      "@types/lodash": "^4.14.194",
+      "@types/node": "^18.16.3",
+      "airtable": "^0.11.6",
+      "axios": "^1.4.0",
+      "lodash": "^4.17.21",
+      "ts-node": "^10.9.1",
+      "typescript": "^5.0.4",
+      "yaml": "^2.2.2"
   }
 }
