--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-landscapeName: graphql
+landscapeName: paima
 landscapeMemberClasses: []
 # project: a092M00001G4R8CQAV # GraphQL Foundation
 landscapeMemberCategory: Paima Engine Professionals
